# Software_Testing_C-using-CUNIT

./: CMakeLists.txt  ass3q1.c  ass3q2.c  ass3q3.c  ass3q4.c  ass3q5.c  ass3q6a.c  ass3q6b.c  ass3q6c.c  avg_and_max.c  avg_and_max.h  factorial.c  gcd.c
